<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/calculatorId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editTextInput"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="20sp"
        android:background="@drawable/edit_text_background"
        />

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin_right"
            android:text="@string/_7"
            android:textSize="@dimen/button_text"
            android:onClick="buttonOnClick"/>
        <Button
            android:id="@+id/button_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin_right"
            android:text="@string/_8"
            android:textSize="@dimen/button_text"
            android:onClick="buttonOnClick"/>
        <Button
            android:id="@+id/button_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_weight="1"
            android:text="@string/_9"
            android:textSize="@dimen/button_text"
            android:onClick="buttonOnClick"/>
        <Button
            android:id="@+id/button_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textSize="@dimen/button_text"
            android:onClick="buttonOnClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin_right"
            android:text="@string/_4"
            android:textSize="@dimen/button_text" />
        <Button
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin_right"
            android:text="@string/_5"
            android:textSize="@dimen/button_text"
            android:onClick="buttonOnClick"/>
        <Button
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin_right"
            android:text="@string/_6"
            android:textSize="@dimen/button_text"
            android:onClick="buttonOnClick"/>
        <Button
            android:id="@+id/button_multiplication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multiplication"
            android:textSize="@dimen/button_text"
            android:onClick="buttonOnClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin_right"
            android:text="@string/_1"
            android:textSize="@dimen/button_text"
            android:onClick="buttonOnClick"/>
        <Button
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin_right"
            android:text="@string/_2"
            android:textSize="@dimen/button_text"
            android:onClick="buttonOnClick"/>
        <Button
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin_right"
            android:text="@string/_3"
            android:textSize="@dimen/button_text"
            android:onClick="buttonOnClick"/>
        <Button
            android:id="@+id/button_division"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/division"
            android:textSize="@dimen/button_text"
            android:onClick="buttonOnClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4.0">
        <Button
            android:id="@+id/button_point"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin_right"
            android:text="@string/_point"
            android:textSize="@dimen/button_text"
            android:onClick="buttonOnClick"/>
        <Button
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin_right"
            android:text="@string/_0"
            android:textSize="@dimen/button_text"
            android:onClick="buttonOnClick"/>
        <Button
            android:id="@+id/button_equally"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin_right"
            android:text="@string/equally"
            android:textSize="@dimen/button_text"
            android:onClick="buttonOnClick"/>
        <Button
            android:id="@+id/button_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textSize="@dimen/button_text"
            android:onClick="buttonOnClick"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4.0">
        <Space
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            android:textSize="@dimen/button_text"/>
    </LinearLayout>
</LinearLayout>
